--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "can-blf-parser"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Ultra-fast BLF + DBC parser compiled to WebAssembly (universal, multi-DBC, multi-channel)."
 license = "MIT"
@@ -40,3 +40,6 @@ lto = "fat"
 codegen-units = 1
 panic = "abort"
 strip = true
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
